made homepage app and set up authentication for visitor

--- a/guestbook/templates/guestbook/form.html
+++ b/guestbook/templates/guestbook/form.html
@@ -1,3 +1,4 @@
+<a href = {{homepage_link}}> Skip the guestbook</a>
 <form action="/guestbook/entry/" method="post"  enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_table }}
