Added a gallery app, created gallery template - still need to make album page

--- a/homepage/templates/homepage/wrongpassword.html
+++ b/homepage/templates/homepage/wrongpassword.html
@@ -1,4 +1,7 @@
-<form action= {% url 'passwordpage' %} method="post"  enctype="multipart/form-data">
+<p>
+	Wrong Password! Try Again
+</p>
+<form action= {% url 'tryagain' %} method="post"  enctype="multipart/form-data">
     {% csrf_token %}
     <label for="password">Password:</label>
   	<input type="text" id="password" name="password"><br><br>
