--- a/guestbook/templates/guestbook/form.html
+++ b/guestbook/templates/guestbook/form.html
@@ -1,5 +1,5 @@
 <a href = {{homepage_link}}> Skip the guestbook</a>
-<form action="/guestbook/entry/" method="post"  enctype="multipart/form-data">
+<form action= {% url 'guestbook_entry' %} method="post"  enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_table }}
     <input type="submit" value="Submit">
