--- a/guestbook/templates/guestbook/guestbook.html
+++ b/guestbook/templates/guestbook/guestbook.html
@@ -16,7 +16,7 @@
 	        	<td> {{ entry.entry_fav_joke }} </td>
 	        	<td> {{ entry.entry_blurb }} </td>
 	        	{% if entry.entry_picture %}
-	        		<td> <img src = "{{ entry.entry_picture_smole.url }}" > </td>
+	        		<td> <img src = "{{ entry.entry_picture_smole.url }}" alt = "{{entry.entry_name}} picture" > </td>
 	        	{% endif %}
 
 	        </tr>
