--- a/templates/main.html
+++ b/templates/main.html
@@ -5,17 +5,16 @@
   <head>
     {% load static %}
 	  	 <!-- Latest compiled and minified CSS -->
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-  <link  rel="stylesheet" type="text/css" href="{% static 'stylesheets/main.css' %}">
+	<link  rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  
 	<!-- jQuery library -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-
-
 
 
   </head>
