--- a/gallery/templates/gallery/details.html
+++ b/gallery/templates/gallery/details.html
@@ -6,35 +6,31 @@
 <!--Carousel -->
 		<div class="card mx-auto bg-dark" style="width:100%">
 			<div id="picturecarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
-			  <div class="carousel-inner">
-				<div class="carousel-item active">
-						
-						<svg width="100%" height="700px" viewBox="0 0 100 700" preserveAspectRatio="xMidYMid meet">
-
-							<text x="50%" y="50%" fill="#a6a6a6" dy=".3em" font-size="100px" text-anchor="middle">{{adv.name}}</text>
+				<div class="carousel-inner">
+					<div class="carousel-item active">						
+						<svg width="100%" height="700px" viewBox="0 0 100 700"preserveAspectRatio="xMidYMid meet">
+							<text x="50%" y="50%" fill="#a6a6a6" dy=".3em" font-size="100" text-anchor="middle">{{adv.name}}</text>
 						</svg>		
-				</div>
+					</div>
+
 				{% for entry in pics %}		   
 				    <div class="carousel-item">
-				    	
 					      <img src="{{entry.picture.url}}" class="d-block w-100 img-responsive img-shrink-700" alt="{{entry.picture_desc}}">
-					    	
-					    
 					</div>
 				{% endfor %}
+
 				</div>
-			
-			<button class="carousel-control-prev" type="button" data-bs-target="#picturecarousel"  data-bs-slide="prev">
-		    	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    	<span class="visually-hidden">Previous</span>
-		  	</button>
-		  	<button class="carousel-control-next" type="button" data-bs-target="#picturecarousel"  data-bs-slide="next">
-		    	<span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    	<span class="visually-hidden">Next</span>
-		 	</button>
-		</div>
+				<button class="carousel-control-prev" type="button" data-bs-target="#picturecarousel"  data-bs-slide="prev">
+			    	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    	<span class="visually-hidden">Previous</span>
+			  	</button>
+			  	<button class="carousel-control-next" type="button" data-bs-target="#picturecarousel"  data-bs-slide="next">
+			    	<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    	<span class="visually-hidden">Next</span>
+			 	</button>
+			</div>
 	
-	</div>
+		</div>
 
 <!--Written Content -->
 	<br><br>
@@ -47,10 +43,18 @@
 	</div>
 
 <!-- Map CHECK WHEN ONLINE IF IT WORKS< STYLIZE AFTERWARD-->
+	{% if adv.gpstrax %}
 
-	<div class="d-flex justify-content-center">
-		<iframe src = "{{adv.name}}.html" widge="600" height="600" style="border:1px solid black;"></iframe>
-	</div>
+		<div class="d-flex justify-content-center">
+			<a href="{{adv.gpstrax.url}}" download="{{adv.name}}">
+				<button type="button"> Download GPS Track </button>
+			</a>
+		</div>
+		<br>
+		<div class="d-flex justify-content-center">
+			<iframe src = "{{adv.name}}.html" widge="600" height="600" style="border:1px solid black;"></iframe>
+		</div>
+	{% endif %}
 </div>
 
 	{% endif %}
