--- a/guestbook/templates/guestbook/guestbook.html
+++ b/guestbook/templates/guestbook/guestbook.html
@@ -25,6 +25,7 @@
                 </thead>
             	{% for entry in latest_guestbook %}
             		<tbody>
+                        <!--<tr data-toggle="modal" data-id = "{{entry.id}}" data-target="#imgModal">-->
                         <tr>
             	        	<td> {{ entry.entry_date }} </td>
             	        	<td> {{ entry.entry_name }} </td>
@@ -32,7 +33,7 @@
             	        	<td> {{ entry.entry_fav_joke }} </td>
             	        	<td> {{ entry.entry_blurb }} </td>
             	        	{% if entry.entry_picture %}
-            	        		<td> <img class="img-shrink-100" src = "{{ entry.entry_picture.url }}"  > </td>
+            	        		<td> <img id = "{{entry.entry_name}}click" class="img-shrink-100" src = "{{ entry.entry_picture.url }}"  > </td>
                             {% endif %}
 
             	        </tr>
@@ -41,28 +42,56 @@
             </table>
 
             <!--Modal Code -->
+            <div id="imgModal" class="modal">
+
+              <!-- The Close Button -->
+              <span class="close">&times;</span>
+
+              <!-- Modal Content (The Image) -->
+              <img class="modal-content img-shrink-250" id="gImg" src="{{ entry.entry_picture.url }}">
+
+              <!-- Modal Caption (Image Text) -->
+              <div id="caption">slkfjsldkj</div>
+            </div>
             <!-- add to element data-toggle="modal" data-target="#rowModal"-->
 
-        <div class="modal" tabindex="-1" role="dialog" id="rowModal">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <p>Modal body text goes here.</p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Save changes</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
-        </div>
+<script>
 
+/*
+       $(function(){
+    $('#imgModal').modal({
+        keyboard: true,
+        backdrop: "static",
+        show:false,
+
+    }).on('show', function(){ //subscribe to show method
+          var getIdFromRow = $(event.target).closest('tr').data('id'); //get the id from tr
+        //make your ajax call populate items or what even you need
+        $(this).find('#gImg').html($('<b> Order Id selected: ' + getIdFromRow  + '</b>'))
+    });
+});
+*/
+// Get the modal
+var modal = document.getElementById("imgModal");
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById("{{entry.entry_name}}click");
+var modalImg = document.getElementById("gImg");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+  modal.style.display = "block";
+  modalImg.src = this.src;
+  captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}; 
+</script>
         <!--Modal code ends -->
         </div>
     </div>
