--- a/static/css/imageModal.css
+++ b/static/css/imageModal.css
@@ -1,5 +1,5 @@
  /* Style the Image Used to Trigger the Modal */
-#guestImg {
+#gImg {
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
