--- a/templates/main.html
+++ b/templates/main.html
@@ -24,8 +24,9 @@
 
   <div id = "banner">
   	<svg width="100%" height="100">
-      <rect width="100%" height="100" style="fill:rgb(0,0,255);stroke-width:10;stroke:rgb(0,0,0)" />
+      <rect width="100%" height="100" style="fill:rgb(110,111,120);stroke-width:10;stroke:rgb(0,0,0)" />
   	</svg>
+    <embed id="mtn_banner" src="../media/banner.svg" alt="mountain banner" style="position: absolute; z-index: 1" width="100%" height = "100">
   </div>
 
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark px-3" aria-label="The navbar">
