--- a/homepage/templates/homepage/wrongpassword.html
+++ b/homepage/templates/homepage/wrongpassword.html
@@ -1,9 +1,41 @@
-<p>
-	Wrong Password! Try Again
-</p>
-<form action= {% url 'tryagain' %} method="post"  enctype="multipart/form-data">
-    {% csrf_token %}
-    <label for="password">Password:</label>
-  	<input type="text" id="password" name="password"><br><br>
-    <input type="submit" value="Submit">
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+
+	<style>
+	.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
+
+
+</style>
+ 	<body>
+ 		<div class="container">
+			<div class = "centered">
+				<p>
+					Wrong Password! Try Again
+				</p>
+				<form action= {% url 'tryagain' %} method="post"  enctype="multipart/form-data">
+				    {% csrf_token %}
+				    <label for="password">Password:</label>
+				  	<input type="password" id="password" name="password">
+				    <input type="submit" value="Submit">
+				</form>
+			</div>
+		</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
+	</body>
+</html>
