fixing some css stuff: width of map, navbar

--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -25,9 +25,7 @@
 }
 
 .navbar-nav.navbar-center { 
-  position: absolute; 
-  left: 50%; 
-  transform: translatex(-50%); 
+  margin: auto;
         } 
 
 .link-color{
