--- a/templates/main.html
+++ b/templates/main.html
@@ -29,18 +29,10 @@
     <embed id="mtn_banner" src="../media/banner.svg" alt="mountain banner" style="position: absolute; z-index: 1" width="100%" height = "100">
   </div>
 
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark px-3" aria-label="The navbar">
-    <div class="container-fluid">
-      <a class="navbar-brand fs-3" href= {% url "homepage" %} >Home</a>
-
-      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#thenavbar" aria-controls="thenavbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="navbar-collapse collapse" id="thenavbar">  
-        <ul class="navbar-nav navbar-center mb-2 mb-sm-0" >
-
-          <li class="nav-item fs-3 mx-5">
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+  
+    <ul class="navbar-nav navbar-center mb-2 mb-sm-0">
+      <li class="nav-item fs-3 mx-5">
             <a class="nav-link link-color" aria-current="page" href="#">About</a>
           </li> 
 
@@ -51,12 +43,10 @@
           <li class="nav-item fs-3 mx-5 ">
             <a class="nav-link link-color" aria-current="page" href={% url 'guestbook' %}>Guestbook</a>
           </li>
-          
-        </ul>
-      </div>
-    </div>
-  </nav>
+    </ul>
 
+  
+</nav>
 {% block content %}{% endblock %}
 
 
