fixing little things (button colour, navbar About link, removing static url pattern bypass)

--- a/guestbook/templates/guestbook/guestbook.html
+++ b/guestbook/templates/guestbook/guestbook.html
@@ -8,7 +8,7 @@
             <br>
         <div class="d-flex justify-content-center">
             <p class=" p-small"> Haven't signed yet? &nbsp;</p>
-            <span><a class="btn btn-primary" href={% url 'guestbook_entry' %}> Click Here! </a></span>
+            <span><a class="btn btn-dark" href={% url 'guestbook_entry' %}> Click Here! </a></span>
         </div>
         <br><br>
         <div class="table-responsive-xl">
