--- a/templates/main.html
+++ b/templates/main.html
@@ -33,7 +33,7 @@
   
     <ul class="navbar-nav navbar-center mb-2 mb-sm-0">
       <li class="nav-item fs-3 mx-5">
-            <a class="nav-link link-color" aria-current="page" href="#">About</a>
+            <a class="nav-link link-color" aria-current="page" href={% url 'homepage' %}>About</a>
           </li> 
 
           <li class="nav-item fs-3 mx-5">
