--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% if gallery %}
-	<div class = "album py-5" style="background-color:#e6e6ff">
+	<div class = "album py-5">
 		<div class = "container">
 			<div class = "row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
