--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -1,4 +1,10 @@
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 .img-shrink-100 {
   object-fit: contain; /* Do not scale the image */
   object-position: center; /* Center the image within the element */
