made thank you page for guestbook submit, fixed up homepage a little and added verbose name to guestbook entries to make the admin easier. Also updated gitignore

--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 {% load static %}
 <div class="container py-5">
-	<div >
+	<div class='col-md-12 text-center' >
 		<img src="{% static 'img/drawing-1.svg' %}" alt='islandsharc drawing' class='img-shrink-250'>
 		<h1>
 			Welcome to Island Sharcs!
