small changes: carousel on details.html and svg on home

--- a/gallery/templates/gallery/details.html
+++ b/gallery/templates/gallery/details.html
@@ -30,7 +30,7 @@
 			<div id="picturecarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
 				<div class="carousel-inner">
 					<div class="carousel-item active">						
-						<svg width= "400px" height="216.5px" viewBox="0 0 100 700"preserveAspectRatio="xMidYMid meet" class="img-fluid w-100">
+						<svg width= "400px" height="216.5px" viewBox="0 0 100 700"preserveAspectRatio="xMidYMid meet" class="img-fluid img-shrink-700 w-100">
 							<text x="50%" y="50%" fill="#a6a6a6" dy=".3em" font-size="100" text-anchor="middle">{{adv.name}}</text>
 						</svg>		
 					</div>
