cleaned up old comments, temporary fix for mobile view: figure out later how to not be forced into using the toggle button in mobile

--- a/gallery/templates/gallery/details.html
+++ b/gallery/templates/gallery/details.html
@@ -68,12 +68,12 @@
 			<a href="{{adv.gpstrax.url}}" download="{{adv.name}}">
 				<button type="button"> Download GPS Track </button>
 			</a>
-			<br><br><p> Terrain Map may not work in Chrome or Edge </p>
+			<br><br>
 		</div>
 		
 		<div class="d-flex justify-content-center">
 
-			<iframe src = "{% url 'map' adv.id %}" width="1400" height="600" style="border:1px solid black;"></iframe>
+			<iframe src = "{% url 'map' adv.id %}" width="100%" height="600" style="border:1px solid black;"></iframe>
 		</div>
 	{% endif %}
 </div>
