--- a/templates/main.html
+++ b/templates/main.html
@@ -23,8 +23,17 @@
   <body>
 
 
-<nav class="navbar navbar-expand navbar-dark bg-dark">
-  
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <div class="container-fluid">
+        <!-- Toggle Button -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- Navbar Menu -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav navbar-center mb-2 mb-sm-0">
       <li class="nav-item fs-3 mx-5">
             <a class="nav-link link-color" aria-current="page" href={% url 'homepage' %}>About</a>
@@ -38,8 +47,8 @@
             <a class="nav-link link-color" aria-current="page" href={% url 'guestbook' %}>Guestbook</a>
           </li>
     </ul>
-
-  
+</div>
+  </div>
 </nav>
 {% block content %}{% endblock %}
 
